apps/nexus/ingress/nexus.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus-server
  name: nexus
  namespace: nexus
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: https
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: nexus-server
  sessionAffinity: None
  type: ClusterIP
