apps/nexus/ingress/nexus.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-ing
  namespace: nexus
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nexus.localhost.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus
          servicePort: 8081
      - path: /v2/
        backend:
          serviceName: nexus
          servicePort: 5000
